# housing-gpt

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  dashboard.qmd  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  scrapy.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml  main.yml  scrape.yml
docs/: _quarto.yml  index.qmd
docs/developers/: installation.qmd
reports/: analysis.qmd
scripts/: init.sh
src/hgpt/: settings.py  utils.py
src/hgpt/pipelines/: __init__.py  _distance.py  _extract.py  sys-extract.txt
src/hgpt/spiders/: __init__.py  _sreality.py  _utils.py
src/hgpt/spiders/_llm/: __init__.py  _detail.py  _list.py  _spider.py  sys-detail.md  sys-list.md  user-detail.md  user-list.md
